# nth-sample-agents

./: .gitignore
ferry-schedule/: agent.yaml  main.py  pyproject.toml
loop-qa/: agent.yaml  main.py  requirements.txt
